bug fix - removed overflow hidden in body except for parking page

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -4,7 +4,6 @@ html {
 
 html, body {
   height: 100%;
-  overflow: hidden;
 }
 
 .hidden {
